[gd_scene load_steps=31 format=2]

[ext_resource path="res://enviroment/EndCamera.gd" type="Script" id=1]
[ext_resource path="res://enviroment/endScene/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://enviroment/portals/Codes.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/MLTWNII_.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://enviroment/MovingFloor.gd" type="Script" id=5]
[ext_resource path="res://enviroment/portals/While.gd" type="Script" id=6]
[ext_resource path="res://assets/textures/gray_square.png" type="Texture" id=7]
[ext_resource path="res://Game.gd" type="Script" id=8]
[ext_resource path="res://assets/textures/background/fondo.png" type="Texture" id=9]
[ext_resource path="res://entities/enemies/Robot.tscn" type="PackedScene" id=10]
[ext_resource path="res://gui/Interface.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/textures/background/matrix.jpg" type="Texture" id=12]
[ext_resource path="res://entities/player/Dron.tscn" type="PackedScene" id=13]
[ext_resource path="res://enviroment/Cooler.tscn" type="PackedScene" id=14]
[ext_resource path="res://enviroment/portals/Portal.tscn" type="PackedScene" id=15]
[ext_resource path="res://enviroment/Cel.tscn" type="PackedScene" id=16]
[ext_resource path="res://enviroment/Platform.tscn" type="PackedScene" id=17]
[ext_resource path="res://entities/player/Programmer.tscn" type="PackedScene" id=18]
[ext_resource path="res://entities/enemies/Chrom.tscn" type="PackedScene" id=19]
[ext_resource path="res://entities/enemies/MatrixTurret.tscn" type="PackedScene" id=20]
[ext_resource path="res://enviroment/endScene/BreakablePlatform.tscn" type="PackedScene" id=21]
[ext_resource path="res://enviroment/endScene/MovingPlatform.tscn" type="PackedScene" id=22]
[ext_resource path="res://entities/enemies/PlayerEnemy.tscn" type="PackedScene" id=23]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=3]
0/name = "gray_square.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 128, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "gray_square.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 64, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 294.634, 357.978 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 36.912, 14.2949 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 14.917, 108.313 )

[node name="Game" type="Node"]
script = ExtResource( 8 )
turret_scene = ExtResource( 20 )

[node name="Background" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
modulate = Color( 0.32549, 0.372549, 0.32549, 1 )
self_modulate = Color( 0.741176, 0.913725, 0.74902, 1 )
margin_left = 671.838
margin_top = 9.71667
margin_right = 2271.84
margin_bottom = 736.717
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Background"]
margin_left = 2060.13
margin_top = -15.1827
margin_right = 3513.13
margin_bottom = 791.817
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Background"]
margin_left = 611.11
margin_top = -16.9585
margin_right = 2064.11
margin_bottom = 790.042
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Background"]
margin_left = 3513.01
margin_top = -26.7972
margin_right = 4966.01
margin_bottom = 780.203
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Background"]
margin_left = -839.485
margin_top = -19.1442
margin_right = 613.515
margin_bottom = 787.856
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="Background"]
margin_left = 4940.31
margin_top = -18.7261
margin_right = 6393.31
margin_bottom = 788.274
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="Background"]
margin_left = 6054.31
margin_top = -36.7261
margin_right = 7507.31
margin_bottom = 770.274
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect8" type="TextureRect" parent="Background"]
margin_left = 6050.51
margin_top = -840.077
margin_right = 7503.51
margin_bottom = -33.0764
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 688.838, 26.7167 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( -720810, 0, 0, -720790, 0, 0, -655274, 0, 0, -655254, 0, 0, -589738, 0, 0, -589718, 0, 0, -524202, 0, 0, -524182, 0, 0, -458666, 0, 0, -458646, 0, 0, -393130, 0, 0, -393110, 0, 0, -327594, 0, 0, -327574, 0, 0, -262058, 0, 0, -262038, 0, 0, -196522, 0, 0, -196502, 0, 0, -130986, 0, 0, -130966, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0, -65483, 0, 0, -65482, 0, 0, -65481, 0, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, -65471, 0, 0, -65470, 0, 0, -65469, 0, 0, -65468, 0, 0, -65467, 0, 0, -65466, 0, 0, -65465, 0, 0, -65464, 0, 0, -65463, 0, 0, -65462, 0, 0, -65461, 0, 0, -65460, 0, 0, -65459, 0, 0, -65458, 0, 0, -65457, 0, 0, -65456, 0, 0, -65455, 0, 0, -65454, 0, 0, -65453, 0, 0, -65452, 0, 0, -65451, 0, 0, -65450, 0, 0, -65430, 0, 0, 65525, 0, 0, 24, 0, 0, 47, 0, 0, 66, 0, 0, 86, 0, 0, 106, 0, 0, 131061, 0, 0, 65560, 0, 0, 65583, 0, 0, 65602, 0, 0, 65622, 0, 0, 65642, 0, 0, 196597, 0, 0, 131096, 0, 0, 131119, 0, 0, 131138, 0, 0, 131158, 0, 0, 131178, 0, 0, 262133, 0, 0, 196632, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196655, 0, 0, 196674, 0, 0, 196694, 0, 0, 196714, 0, 0, 327669, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262168, 0, 0, 262191, 0, 0, 262210, 0, 0, 262230, 0, 0, 262250, 0, 0, 393205, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327704, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 327727, 0, 0, 327746, 0, 0, 327766, 0, 0, 327786, 0, 0, 458741, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393240, 0, 0, 393257, 0, 0, 393258, 0, 0, 393259, 0, 0, 393263, 0, 0, 393282, 0, 0, 393302, 0, 0, 393322, 0, 0, 524277, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 458776, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458799, 0, 0, 458818, 0, 0, 458838, 0, 0, 458839, 0, 0, 458840, 0, 0, 458841, 0, 0, 458842, 0, 0, 458843, 0, 0, 458844, 0, 0, 458845, 0, 0, 458846, 0, 0, 458858, 0, 0, 589813, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524394, 0, 0, 655349, 0, 0, 655350, 0, 0, 655351, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589930, 0, 0, 720885, 0, 0, 655466, 0, 0, 786421, 0, 0, 786422, 0, 0, 786423, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720937, 0, 0, 720938, 0, 0, 720939, 0, 0, 720940, 0, 0, 720941, 0, 0, 720942, 0, 0, 720943, 0, 0, 720944, 0, 0, 720945, 0, 0, 720946, 0, 0, 720947, 0, 0, 720948, 0, 0, 720949, 0, 0, 720950, 0, 0, 720951, 0, 0, 720952, 0, 0, 720953, 0, 0, 720954, 0, 0, 720955, 0, 0, 720956, 0, 0, 720957, 0, 0, 720958, 0, 0, 720959, 0, 0, 720960, 0, 0, 720961, 0, 0, 720962, 0, 0, 720963, 0, 0, 720964, 0, 0, 720965, 0, 0, 720966, 0, 0, 720967, 0, 0, 720968, 0, 0, 720969, 0, 0, 720970, 0, 0, 720971, 0, 0, 720972, 0, 0, 720973, 0, 0, 720974, 0, 0, 720975, 0, 0, 720976, 0, 0, 720977, 0, 0, 720978, 0, 0, 720979, 0, 0, 720980, 0, 0, 720981, 0, 0, 720982, 0, 0, 720983, 0, 0, 720984, 0, 0, 720985, 0, 0, 720986, 0, 0, 720987, 0, 0, 720988, 0, 0, 720989, 0, 0, 720990, 0, 0, 720991, 0, 0, 720992, 0, 0, 720993, 0, 0, 720994, 0, 0, 720995, 0, 0, 720996, 0, 0, 720997, 0, 0, 720998, 0, 0, 720999, 0, 0, 721000, 0, 0, 721001, 0, 0, 721002, 0, 0 )

[node name="DialogBox" type="Control" parent="."]
margin_left = 2009.84
margin_top = 406.717
margin_right = 2577.84
margin_bottom = 621.717
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="DialogBox"]
margin_left = 71.0
margin_top = 28.0
margin_right = 469.0
margin_bottom = 127.0
color = Color( 0.811765, 0.792157, 0.576471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialogBox"]
margin_left = 92.0
margin_top = 29.0
margin_right = 466.0
margin_bottom = 180.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.329412, 0.25098, 0.0666667, 1 )
bbcode_enabled = true
bbcode_text = "All bugs need to be removed"
text = "All bugs need to be removed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Control" parent="."]
margin_left = 578.838
margin_top = 599.717
margin_right = 1142.84
margin_bottom = 845.717
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Info"]
margin_left = 71.0
margin_top = -31.0
margin_right = 469.0
margin_bottom = 118.0
color = Color( 0.811765, 0.792157, 0.576471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Info"]
margin_left = 92.0
margin_top = -19.0
margin_right = 483.0
margin_bottom = 118.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.329412, 0.25098, 0.0666667, 1 )
bbcode_enabled = true
bbcode_text = "Shock enemies in the head with the drone"
text = "Shock enemies in the head with the drone"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Info"]
margin_left = 6.59637
margin_top = -159.489
margin_right = 525.596
margin_bottom = -45.4889
color = Color( 0.811765, 0.792157, 0.576471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Info"]
margin_left = 27.5964
margin_top = -147.489
margin_right = 511.596
margin_bottom = -42.4889
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.329412, 0.25098, 0.0666667, 1 )
bbcode_enabled = true
bbcode_text = "Use the space to change characters"
text = "Use the space to change characters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Info"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Info/Area2D"]
position = Vector2( -266.639, -229.194 )
shape = SubResource( 5 )

[node name="Portal" parent="." instance=ExtResource( 15 )]
position = Vector2( 2260.13, 635.575 )

[node name="Bugs" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Bug" type="Area2D" parent="Bugs"]
position = Vector2( 1272.54, 381.479 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Bugs/Bug"]
margin_left = 20.3058
margin_top = 268.653
margin_right = 97.3058
margin_bottom = 298.653
color = Color( 0.411765, 0.592157, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bugs/Bug"]
position = Vector2( 59.1185, 283.583 )
shape = SubResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="Bugs/Bug"]
margin_left = 39.3471
margin_top = 279.225
margin_right = 105.347
margin_bottom = 307.225
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "BUG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bug2" type="Area2D" parent="Bugs"]
position = Vector2( 703.719, 12.2649 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Bugs/Bug2"]
margin_left = 20.3058
margin_top = 268.653
margin_right = 97.3058
margin_bottom = 298.653
color = Color( 0.411765, 0.592157, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bugs/Bug2"]
position = Vector2( 59.1185, 283.583 )
shape = SubResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="Bugs/Bug2"]
margin_left = 39.3471
margin_top = 279.225
margin_right = 105.347
margin_bottom = 307.225
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "BUG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bug3" type="Area2D" parent="Bugs"]
position = Vector2( 1792.57, 74.766 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Bugs/Bug3"]
margin_left = 20.3058
margin_top = 268.653
margin_right = 97.3058
margin_bottom = 298.653
color = Color( 0.411765, 0.592157, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bugs/Bug3"]
position = Vector2( 59.1185, 283.583 )
shape = SubResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="Bugs/Bug3"]
margin_left = 39.3471
margin_top = 279.225
margin_right = 105.347
margin_bottom = 307.225
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "BUG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BugsInfo" type="CanvasLayer" parent="Bugs"]

[node name="Label" type="Label" parent="Bugs/BugsInfo"]
margin_left = 1736.84
margin_top = 36.7167
margin_right = 1960.84
margin_bottom = 70.7167
text = "codes: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovingFloor" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Platform" parent="MovingFloor" instance=ExtResource( 17 )]
position = Vector2( 3264.81, 686.166 )

[node name="Cooler" parent="MovingFloor" instance=ExtResource( 14 )]
position = Vector2( 2405.44, 907.711 )

[node name="Cooler2" parent="MovingFloor" instance=ExtResource( 14 )]
position = Vector2( 2681.76, 906.376 )

[node name="Cooler3" parent="MovingFloor" instance=ExtResource( 14 )]
position = Vector2( 2956.73, 906.376 )

[node name="Cooler4" parent="MovingFloor" instance=ExtResource( 14 )]
position = Vector2( 3232.71, 906.376 )

[node name="EndPosition" type="Position2D" parent="MovingFloor"]
position = Vector2( 2369.7, 698.717 )

[node name="StartPosition" type="Position2D" parent="MovingFloor"]
position = Vector2( 3299.59, 698.717 )

[node name="Cel" parent="MovingFloor" instance=ExtResource( 16 )]
position = Vector2( 3467.92, 657.322 )

[node name="Chrom" parent="." instance=ExtResource( 19 )]
position = Vector2( 4830.22, 210.366 )

[node name="Robot" parent="." instance=ExtResource( 10 )]
position = Vector2( 1640.05, 306.414 )

[node name="Robot2" parent="." instance=ExtResource( 10 )]
position = Vector2( 971.635, 242.506 )

[node name="Robot3" parent="." instance=ExtResource( 10 )]
position = Vector2( 1196.37, 690.524 )

[node name="Programmer" parent="." instance=ExtResource( 18 )]
position = Vector2( 3692.44, 693.756 )

[node name="Dron" parent="." instance=ExtResource( 13 )]
position = Vector2( 571.379, 612.243 )

[node name="PlayerEnemy" parent="." instance=ExtResource( 23 )]
position = Vector2( 2764.19, 565.629 )

[node name="PlayerEnemy2" parent="." instance=ExtResource( 23 )]
position = Vector2( 2754.29, 311.07 )

[node name="PlayerEnemy3" parent="." instance=ExtResource( 23 )]
position = Vector2( 3076.73, 185.205 )

[node name="PlayerEnemy4" parent="." instance=ExtResource( 23 )]
position = Vector2( 2444.58, 438.35 )

[node name="PlayerEnemy5" parent="." instance=ExtResource( 23 )]
position = Vector2( 3332.7, 374.71 )

[node name="Interface" parent="." instance=ExtResource( 11 )]

[node name="ChromEndPosition" type="Position2D" parent="."]
position = Vector2( 4889.42, 56.1526 )

[node name="EndCamera" type="Camera2D" parent="."]
position = Vector2( 6866.51, 410.767 )
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 1 )

[node name="EndArea" type="Area2D" parent="."]
position = Vector2( 6209.93, 71.9716 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndArea"]
position = Vector2( 576.621, 549.127 )
shape = SubResource( 7 )

[node name="endEnviroment" type="Node2D" parent="."]

[node name="Platform" parent="endEnviroment" instance=ExtResource( 2 )]
position = Vector2( 7117.59, 620.273 )

[node name="Platform2" parent="endEnviroment" instance=ExtResource( 2 )]
position = Vector2( 7270.65, 486.395 )

[node name="Platform3" parent="endEnviroment" instance=ExtResource( 2 )]
position = Vector2( 6905.19, 103.034 )

[node name="Platform4" parent="endEnviroment" instance=ExtResource( 2 )]
position = Vector2( 6700.55, 269.304 )

[node name="Platform5" parent="endEnviroment" instance=ExtResource( 2 )]
position = Vector2( 7219.68, 218.335 )

[node name="Platform6" parent="endEnviroment" instance=ExtResource( 2 )]
position = Vector2( 6485.35, 125.835 )

[node name="Platform7" parent="endEnviroment" instance=ExtResource( 2 )]
position = Vector2( 6555.06, -98.0802 )

[node name="BreakablePlatform" parent="endEnviroment" instance=ExtResource( 21 )]
position = Vector2( 6935.54, 532.474 )

[node name="MovingPlatform" parent="endEnviroment" instance=ExtResource( 22 )]
position = Vector2( 6429.88, 389.717 )
[connection signal="body_entered" from="Info/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Info/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Bugs/Bug" to="Bugs/Bug" method="_on_Bug_body_entered"]
[connection signal="body_entered" from="Bugs/Bug2" to="Bugs/Bug2" method="_on_Bug_body_entered"]
[connection signal="body_entered" from="Bugs/Bug3" to="Bugs/Bug3" method="_on_Bug_body_entered"]
[connection signal="body_entered" from="MovingFloor/Cooler" to="." method="_on_Cooler_body_entered"]
[connection signal="body_entered" from="MovingFloor/Cooler2" to="." method="_on_Cooler2_body_entered"]
[connection signal="body_entered" from="MovingFloor/Cooler3" to="." method="_on_Cooler3_body_entered"]
[connection signal="body_entered" from="MovingFloor/Cooler4" to="." method="_on_Cooler4_body_entered"]
[connection signal="body_entered" from="MovingFloor/Cel" to="MovingFloor" method="_on_Cel_body_entered"]
[connection signal="body_entered" from="EndArea" to="." method="_on_EndArea_body_entered"]
